--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 </head>
 <body>
     <div class="top">
-        <img class="top-cloud" src="/My Site/cloud.png" alt="cloud-img">
+        <img class="top-cloud" src="./cloud.png" alt="cloud-img">
         <h1>I'm Aryan.</h1>
         <h2>A <span class="pro">pro</span>grammer.</h2>
-        <img class="bottom-cloud" src="/My Site/cloud.png" alt="cloud-img">
-        <img src="/My Site/mountain.png" alt="mountain-img">
+        <img class="bottom-cloud" src="./cloud.png" alt="cloud-img">
+        <img src="./mountain.png" alt="mountain-img">
     </div>
     
     <div class="middle">
         <div class="profile">
-            <img class="profile-photo" src="/WhatsApp Image 2022-07-18 at 7.16.45 PM-modified.png" alt="">
+            <img class="profile-photo" src="./WhatsApp Image 2022-07-18 at 7.16.45 PM-modified.png" alt="">
             <h2>Hello.</h2>
             <p class="intro">I am an iOS and Web Developer. I'm the founder and CTO of The App Brewery. I love coffe and brew my own beers</p>
         </div>
@@ -28,14 +28,14 @@
         <div class="skills">
             <h2>My Skills.</h2>
             <div class="skill-row">
-                <img class="skill-row1" src="/My Site/computer.png" alt="">
+                <img class="skill-row1" src="./computer.png" alt="">
                 <h3>Design and Development</h3>
                 <p class="code-skill-desc">I started learning to code when I was 12 years old because i wanted to make my own video games.
                     Over time, I have gained a wealth of experience designing and developing mobile and web applictions.
                 </p>
             </div>
             <div class="skill-row">
-                <img class="skill-row2" src="/My Site/coding.png" alt="">
+                <img class="skill-row2" src="./coding.png" alt="">
                 <h3>Web Development</h3>
                 <p class="code-skill-desc2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat qui iste recusandae at exercitationem pariatur impedit nesciunt magni perspiciatis provident?</p>
             </div>
