made few changes ...

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="profile">
             <img class="profile-photo" src="./WhatsApp Image 2022-07-18 at 7.16.45 PM-modified.png" alt="">
             <h2>Hello.</h2>
-            <p class="intro">I am an iOS and Web Developer. I'm the founder and CTO of The App Brewery. I love coffe and brew my own beers</p>
+            <p class="intro">I am a Web Developer.</p>
         </div>
         <hr>
         <div class="skills">
@@ -30,14 +30,14 @@
             <div class="skill-row">
                 <img class="skill-row1" src="./computer.png" alt="">
                 <h3>Design and Development</h3>
-                <p class="code-skill-desc">I started learning to code when I was 12 years old because i wanted to make my own video games.
-                    Over time, I have gained a wealth of experience designing and developing mobile and web applictions.
+                <p class="code-skill-desc">I started learning to code from first year of college because i wanted to make my websites.
+                    Over time, I have gained a wealth of experience designing and developing web applictions.
                 </p>
             </div>
             <div class="skill-row">
                 <img class="skill-row2" src="./coding.png" alt="">
                 <h3>Web Development</h3>
-                <p class="code-skill-desc2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat qui iste recusandae at exercitationem pariatur impedit nesciunt magni perspiciatis provident?</p>
+                <p class="code-skill-desc2">I am a Full stack Web developer and knows HTML, CSS, Bootstrap, JavaScript , Node.js, React.js and many more which helps me to build amazing websites.</p>
             </div>
         </div>
         <hr>
@@ -53,9 +53,9 @@
     <div class="bottom">
         <a class="footer-link" href="https://www.linkedin.com">Linkedin</a>
         <a class="footer-link" href="https://twitter.com">Twitter</a>
-        <a class="footer-link" href="https://www.appbrewery.com">Appbrewery</a>
+        <a class="footer-link" href="https://www.facebook.com">Facebook</a>
         <a class="footer-link" href="https://www.instagram.com">Instagram</a>
-        <p class="copyright">©  2018 Aryan Kashyap</p>
+        <p class="copyright">©  2023 Aryan Kashyap</p>
 
     </div>
 </body>
